--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
               </svg>
             </div>
             <div class="logo__caption">
-              <p>Alex<br>Walker</p>
+              <p>Venkata Rahul<br>Chinta</p>
             </div>
           </div>
           <div class="avatar__image">
@@ -148,14 +148,14 @@
         <div class="avatar__block">
           <h6>
             <small class="top">Specialization:</small>
-            UI/UX designer<br>and frontend developer
+            DevOps Engineer<br>and Software developer
           </h6>
         </div>
         <!-- data caption #2 -->
         <div class="avatar__block">
           <h6>
             <small class="top">Based in:</small>
-            Odesa, Ukraine
+            Saint Louis, Mo.
           </h6>
         </div>
         <!-- socials and CTA button -->
